--- a/mapa.html
+++ b/mapa.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Animal Busters</title>
+    <title>Title</title>
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
+<div id="canvas">
+
+</div>
+
 </body>
 <script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/mapa.js"></script>
 </html>
