Mapa.html feito com as arrays e tilemap

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+<a href="mapa.html">Mapa</a>
 </body>
 <script src="js/jquery-3.1.1.min.js"></script>
 </html>
