--- a/mapa.html
+++ b/mapa.html
@@ -11,12 +11,21 @@
 <div id="tileMap">
 </div>
 
-<div id="canvas"></div>
+<div id="camera">
+    <div id="canvas"></div>
+</div>
+
+<hr>
+
+<div style="margin-top:500px; width:850px; text-align:center;">
+    <h1>Teclas</h1>
+    <p>Controlar atraves das teclas A, W, S, D</p>
+</div>
 
 </body>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/mapa.js"></script>
-
+<script src="js/movimento.js"></script>
 
 
 </html>
